📦 自動生成のコードを再生成
